// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`homeyApp > should pin the main rule inventory 1`] = `
[
  "@stylistic/multiline-comment-style",
  "@stylistic/quotes",
  "@stylistic/spaced-comment",
  "@typescript-eslint/class-methods-use-this",
  "@typescript-eslint/consistent-type-assertions",
  "@typescript-eslint/consistent-type-exports",
  "@typescript-eslint/consistent-type-imports",
  "@typescript-eslint/default-param-last",
  "@typescript-eslint/explicit-function-return-type",
  "@typescript-eslint/explicit-member-accessibility",
  "@typescript-eslint/max-params",
  "@typescript-eslint/method-signature-style",
  "@typescript-eslint/naming-convention",
  "@typescript-eslint/no-base-to-string",
  "@typescript-eslint/no-explicit-any",
  "@typescript-eslint/no-floating-promises",
  "@typescript-eslint/no-import-type-side-effects",
  "@typescript-eslint/no-magic-numbers",
  "@typescript-eslint/no-shadow",
  "@typescript-eslint/no-unnecessary-condition",
  "@typescript-eslint/no-unnecessary-type-assertion",
  "@typescript-eslint/no-unsafe-type-assertion",
  "@typescript-eslint/no-unused-private-class-members",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-useless-empty-export",
  "@typescript-eslint/only-throw-error",
  "@typescript-eslint/prefer-destructuring",
  "@typescript-eslint/prefer-readonly",
  "@typescript-eslint/promise-function-async",
  "@typescript-eslint/require-array-sort-compare",
  "@typescript-eslint/restrict-template-expressions",
  "@typescript-eslint/return-await",
  "@typescript-eslint/strict-boolean-expressions",
  "@typescript-eslint/strict-void-return",
  "@typescript-eslint/switch-exhaustiveness-check",
  "accessor-pairs",
  "array-callback-return",
  "arrow-body-style",
  "complexity",
  "curly",
  "default-case-last",
  "eqeqeq",
  "func-style",
  "guard-for-in",
  "id-length",
  "import-x/first",
  "import-x/newline-after-import",
  "import-x/no-absolute-path",
  "import-x/no-anonymous-default-export",
  "import-x/no-cycle",
  "import-x/no-default-export",
  "import-x/no-duplicates",
  "import-x/no-dynamic-require",
  "import-x/no-empty-named-blocks",
  "import-x/no-extraneous-dependencies",
  "import-x/no-import-module-exports",
  "import-x/no-mutable-exports",
  "import-x/no-named-as-default",
  "import-x/no-named-as-default-member",
  "import-x/no-named-default",
  "import-x/no-relative-packages",
  "import-x/no-self-import",
  "import-x/no-unassigned-import",
  "import-x/no-unresolved",
  "import-x/no-unused-modules",
  "import-x/no-useless-path-segments",
  "import-x/no-webpack-loader-syntax",
  "import-x/unambiguous",
  "max-classes-per-file",
  "max-depth",
  "max-lines-per-function",
  "max-statements",
  "no-await-in-loop",
  "no-bitwise",
  "no-cond-assign",
  "no-console",
  "no-constructor-return",
  "no-eval",
  "no-extend-native",
  "no-extra-bind",
  "no-extra-boolean-cast",
  "no-fallthrough",
  "no-implicit-coercion",
  "no-inline-comments",
  "no-irregular-whitespace",
  "no-labels",
  "no-lone-blocks",
  "no-lonely-if",
  "no-multi-assign",
  "no-multi-str",
  "no-new",
  "no-new-func",
  "no-object-constructor",
  "no-param-reassign",
  "no-promise-executor-return",
  "no-return-assign",
  "no-self-compare",
  "no-sequences",
  "no-template-curly-in-string",
  "no-unmodified-loop-condition",
  "no-unneeded-ternary",
  "no-unreachable-loop",
  "no-unused-private-class-members",
  "no-useless-computed-key",
  "no-useless-rename",
  "no-useless-return",
  "no-void",
  "object-shorthand",
  "one-var",
  "perfectionist/sort-array-includes",
  "perfectionist/sort-classes",
  "perfectionist/sort-enums",
  "perfectionist/sort-export-attributes",
  "perfectionist/sort-exports",
  "perfectionist/sort-heritage-clauses",
  "perfectionist/sort-import-attributes",
  "perfectionist/sort-imports",
  "perfectionist/sort-interfaces",
  "perfectionist/sort-intersection-types",
  "perfectionist/sort-maps",
  "perfectionist/sort-modules",
  "perfectionist/sort-named-exports",
  "perfectionist/sort-named-imports",
  "perfectionist/sort-object-types",
  "perfectionist/sort-objects",
  "perfectionist/sort-sets",
  "perfectionist/sort-switch-case",
  "perfectionist/sort-union-types",
  "prefer-arrow-callback",
  "prefer-exponentiation-operator",
  "prefer-named-capture-group",
  "prefer-numeric-literals",
  "prefer-object-has-own",
  "prefer-object-spread",
  "prefer-regex-literals",
  "prefer-template",
  "require-atomic-updates",
  "require-unicode-regexp",
  "symbol-description",
  "unicode-bom",
  "unicorn/comment-content",
  "unicorn/consistent-boolean-name",
  "unicorn/consistent-class-member-order",
  "unicorn/consistent-destructuring",
  "unicorn/consistent-function-style",
  "unicorn/custom-error-definition",
  "unicorn/id-match",
  "unicorn/iteration-fallback-style",
  "unicorn/name-replacements",
  "unicorn/no-anonymous-default-export",
  "unicorn/no-array-front-mutation",
  "unicorn/no-asterisk-prefix-in-documentation-comments",
  "unicorn/no-keyword-prefix",
  "unicorn/no-manually-wrapped-comments",
  "unicorn/no-named-default",
  "unicorn/no-non-function-verb-prefix",
  "unicorn/no-null",
  "unicorn/no-unnecessary-boolean-comparison",
  "unicorn/no-unreadable-new-expression",
  "unicorn/no-unsafe-dom-html",
  "unicorn/no-unused-properties",
  "unicorn/prefer-dispose",
  "unicorn/prefer-error-is-error",
  "unicorn/prefer-global-number-constants",
  "unicorn/prefer-import-meta-properties",
  "unicorn/prefer-iterator-concat",
  "unicorn/prefer-minimal-ternary",
  "unicorn/prefer-number-properties",
  "unicorn/prefer-regexp-escape",
  "unicorn/prefer-short-arrow-method",
  "unicorn/prefer-string-starts-ends-with",
  "unicorn/prefer-temporal",
  "unicorn/prefer-uint8array-base64",
  "unicorn/require-post-message-target-origin",
  "unicorn/string-content",
  "unicorn/try-complexity",
  "use-isnan",
  "valid-typeof",
  "yoda",
]
`;

exports[`library > should pin the main rule inventory 1`] = `
[
  "@stylistic/multiline-comment-style",
  "@stylistic/quotes",
  "@stylistic/spaced-comment",
  "@typescript-eslint/class-methods-use-this",
  "@typescript-eslint/consistent-type-assertions",
  "@typescript-eslint/consistent-type-exports",
  "@typescript-eslint/consistent-type-imports",
  "@typescript-eslint/default-param-last",
  "@typescript-eslint/explicit-function-return-type",
  "@typescript-eslint/explicit-member-accessibility",
  "@typescript-eslint/max-params",
  "@typescript-eslint/method-signature-style",
  "@typescript-eslint/naming-convention",
  "@typescript-eslint/no-base-to-string",
  "@typescript-eslint/no-explicit-any",
  "@typescript-eslint/no-floating-promises",
  "@typescript-eslint/no-import-type-side-effects",
  "@typescript-eslint/no-magic-numbers",
  "@typescript-eslint/no-shadow",
  "@typescript-eslint/no-unnecessary-condition",
  "@typescript-eslint/no-unnecessary-type-assertion",
  "@typescript-eslint/no-unsafe-type-assertion",
  "@typescript-eslint/no-unused-private-class-members",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-useless-empty-export",
  "@typescript-eslint/only-throw-error",
  "@typescript-eslint/prefer-destructuring",
  "@typescript-eslint/prefer-readonly",
  "@typescript-eslint/promise-function-async",
  "@typescript-eslint/require-array-sort-compare",
  "@typescript-eslint/restrict-template-expressions",
  "@typescript-eslint/return-await",
  "@typescript-eslint/strict-boolean-expressions",
  "@typescript-eslint/strict-void-return",
  "@typescript-eslint/switch-exhaustiveness-check",
  "accessor-pairs",
  "array-callback-return",
  "arrow-body-style",
  "complexity",
  "curly",
  "default-case-last",
  "eqeqeq",
  "func-style",
  "guard-for-in",
  "id-length",
  "import-x/first",
  "import-x/newline-after-import",
  "import-x/no-absolute-path",
  "import-x/no-anonymous-default-export",
  "import-x/no-cycle",
  "import-x/no-default-export",
  "import-x/no-duplicates",
  "import-x/no-dynamic-require",
  "import-x/no-empty-named-blocks",
  "import-x/no-extraneous-dependencies",
  "import-x/no-import-module-exports",
  "import-x/no-mutable-exports",
  "import-x/no-named-as-default",
  "import-x/no-named-as-default-member",
  "import-x/no-named-default",
  "import-x/no-namespace",
  "import-x/no-relative-packages",
  "import-x/no-self-import",
  "import-x/no-unassigned-import",
  "import-x/no-unresolved",
  "import-x/no-unused-modules",
  "import-x/no-useless-path-segments",
  "import-x/no-webpack-loader-syntax",
  "import-x/unambiguous",
  "max-classes-per-file",
  "max-depth",
  "max-lines-per-function",
  "max-statements",
  "no-await-in-loop",
  "no-bitwise",
  "no-cond-assign",
  "no-console",
  "no-constructor-return",
  "no-eval",
  "no-extend-native",
  "no-extra-bind",
  "no-extra-boolean-cast",
  "no-fallthrough",
  "no-implicit-coercion",
  "no-inline-comments",
  "no-irregular-whitespace",
  "no-labels",
  "no-lone-blocks",
  "no-lonely-if",
  "no-multi-assign",
  "no-multi-str",
  "no-new",
  "no-new-func",
  "no-object-constructor",
  "no-param-reassign",
  "no-promise-executor-return",
  "no-restricted-imports",
  "no-return-assign",
  "no-self-compare",
  "no-sequences",
  "no-template-curly-in-string",
  "no-unmodified-loop-condition",
  "no-unneeded-ternary",
  "no-unreachable-loop",
  "no-unused-private-class-members",
  "no-useless-computed-key",
  "no-useless-rename",
  "no-useless-return",
  "no-void",
  "object-shorthand",
  "one-var",
  "perfectionist/sort-array-includes",
  "perfectionist/sort-classes",
  "perfectionist/sort-enums",
  "perfectionist/sort-export-attributes",
  "perfectionist/sort-exports",
  "perfectionist/sort-heritage-clauses",
  "perfectionist/sort-import-attributes",
  "perfectionist/sort-imports",
  "perfectionist/sort-interfaces",
  "perfectionist/sort-intersection-types",
  "perfectionist/sort-maps",
  "perfectionist/sort-modules",
  "perfectionist/sort-named-exports",
  "perfectionist/sort-named-imports",
  "perfectionist/sort-object-types",
  "perfectionist/sort-objects",
  "perfectionist/sort-sets",
  "perfectionist/sort-switch-case",
  "perfectionist/sort-union-types",
  "prefer-arrow-callback",
  "prefer-exponentiation-operator",
  "prefer-named-capture-group",
  "prefer-numeric-literals",
  "prefer-object-has-own",
  "prefer-object-spread",
  "prefer-regex-literals",
  "prefer-template",
  "require-atomic-updates",
  "require-unicode-regexp",
  "symbol-description",
  "unicode-bom",
  "unicorn/comment-content",
  "unicorn/consistent-boolean-name",
  "unicorn/consistent-class-member-order",
  "unicorn/consistent-destructuring",
  "unicorn/consistent-function-style",
  "unicorn/custom-error-definition",
  "unicorn/id-match",
  "unicorn/iteration-fallback-style",
  "unicorn/name-replacements",
  "unicorn/no-anonymous-default-export",
  "unicorn/no-array-front-mutation",
  "unicorn/no-asterisk-prefix-in-documentation-comments",
  "unicorn/no-keyword-prefix",
  "unicorn/no-manually-wrapped-comments",
  "unicorn/no-named-default",
  "unicorn/no-non-function-verb-prefix",
  "unicorn/no-nonstandard-builtin-properties",
  "unicorn/no-null",
  "unicorn/no-unnecessary-boolean-comparison",
  "unicorn/no-unreadable-new-expression",
  "unicorn/no-unused-properties",
  "unicorn/prefer-dispose",
  "unicorn/prefer-error-is-error",
  "unicorn/prefer-global-number-constants",
  "unicorn/prefer-import-meta-properties",
  "unicorn/prefer-iterator-concat",
  "unicorn/prefer-minimal-ternary",
  "unicorn/prefer-number-properties",
  "unicorn/prefer-regexp-escape",
  "unicorn/prefer-short-arrow-method",
  "unicorn/prefer-string-starts-ends-with",
  "unicorn/prefer-temporal",
  "unicorn/prefer-uint8array-base64",
  "unicorn/string-content",
  "unicorn/try-complexity",
  "use-isnan",
  "valid-typeof",
  "yoda",
]
`;
